--- a/buildabag.html
+++ b/buildabag.html
@@ -43,13 +43,12 @@
             <div class = "priceTracker">
               <h3>Your Goody Bag</h3>
               <h4>Selected Bag:</h4>
-              <h5 id = "bagChoice">Nothing Here Yet</h5>
-              <h4>Selected Ribbon:</h4>
-              <h5 id  = "ribbonChoice">Nothing Here Yet</h5>
-              <h4>Selected Item(s):</h4>
-              <h5 id = "itemsChoice">Nothing Here Yet</h5>
-              <h4>Total:</h4>
-              <h5 id = "totalPrice">$0.00</h5>
+              <h5 id = "bagChoice"> </h5>
+              <h4 >Selected Ribbon:</h4>
+              <h5 id  = "ribbonChoice"> </h5>
+              <h4 id = "itemsChoice">Selected Item(s):</h4>
+              <h4>Price per Bag:</h4>
+              <h5 id = "pricePerBag">$0.00</h5>
             </div>
           </div>
 
