--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="cart"> <p>Your Cart</p>
-      <img class= "logo" src= "./images/cart.png"></img></div>
+    </div>
   </div>
   <div class="container">
     <header class ="row">
