--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="cart"> <p>Your Cart</p>
-      <img class= "logo" src= "./images/cart.png"></img></div>
-  </div>
-  <div class="container">
-    <header class ="row">
+    <p class = "cart">Your Cart</p>
+    <header>
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
