--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body onload = "showDivs(slideIndex)">
   <div class="container">
-    <div class="row">
-      <span class = "cart"><p>Your Cart</p>
-      <img class= "logo" src= "./images/cart.png"></img></span>
-    </div>
-    <header class ="row">
+    <p class = "cart">Your Cart</p>
+    <header>
       <a href = "./index.html"><img class ="logo" src = "./images/logo.png"></img></a>
       <nav>
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
@@ -34,20 +31,36 @@
 
         <div class = "grid">
           <div class = "cell">
-            <h3>Premade Bags</h3>
+            <h3 style = "border-bottom: 1px solid grey;">Premade Bags</h3>
+            <p>Choose a bag with a pre-determined theme to have at your event.</p>
           </div>
           <div class="cell">
-            <h3>Build-A-Bag</h3>
+            <h3 style = "border-bottom: 1px solid grey;">Build-A-Bag</h3>
+            <p>Choose the items to be put in your own, personalized goodie bag that we make and then send to you.</p>
           </div>
           <div class="cell">
-            <h3>Wholesale Bags</h3>
+            <h3 style = "border-bottom: 1px solid grey;">Wholesale Bags</h3>
+            <p>Buy bags in bulk (50 or more) that have a pre-determined theme.</p>
           </div>
         </div>
 
         <div class ="slideGroup">
           <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
           <div class="slides">
-            <div class = "heading">This is a placeholder1</div>
+            <div class = "heading">Baseball Goodie Bag</div>
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Foam Baseball</li>
+              <li>Mini Baseball Sports Missile</li>
+              <li>Baseball Tattoo (assorted)</li>
+              <li>Mini Baseball Magic Spring</li>
+            </ul>
+            <ul>
+              <li>2 Baseball Fun Bands</li>
+              <li>Wooden Baseball Paddle ball Game</li>
+              <li>Baseball Whistle</li>
+            </ul>
+            <div>
           </div>
           <div class="slides">
             <div class = "heading">This is a placeholder2</div>
