--- a/premade.html
+++ b/premade.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <p class = "cart">Your Cart</p>
-    <header class ="row">
+    <header>
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
@@ -46,6 +46,7 @@
             </ul>
             <button onclick = "readMore('dots 1', 'more 1', 'myBtn 1')" id="myBtn 1">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
 
@@ -71,6 +72,7 @@
             </ul>
             <button onclick = "readMore('dots 2', 'more 2', 'myBtn 2')" id="myBtn 2">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -93,6 +95,7 @@
             </ul>
             <button onclick = "readMore('dots 3', 'more 3', 'myBtn 3')" id="myBtn 3">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -117,6 +120,7 @@
             </ul>
             <button onclick = "readMore('dots 4', 'more 4', 'myBtn 4')" id="myBtn 4">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -137,6 +141,7 @@
             </ul>
             <button onclick = "readMore('dots 5', 'more 5', 'myBtn 5')" id="myBtn 5">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -157,6 +162,7 @@
             </ul>
             <button onclick = "readMore('dots 6', 'more 6', 'myBtn 6')" id="myBtn 6">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -178,6 +184,7 @@
             </ul>
             <button onclick = "readMore('dots 7', 'more 7', 'myBtn 7')" id="myBtn 7">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -197,6 +204,7 @@
             </ul>
             <button onclick = "readMore('dots 8', 'more 8', 'myBtn 8')" id="myBtn 8">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
       </div>
