--- a/shipping.html
+++ b/shipping.html
@@ -12,7 +12,7 @@
     <div class = cart>
       <p class>Your Cart</p>
     </div>
-    <header class ="row">
+    <header>
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
