--- a/wholesale.html
+++ b/wholesale.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <p class = "cart">Your Cart</p>
-    <header class ="row">
+    <header>
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
