--- a/premade.html
+++ b/premade.html
@@ -226,6 +226,7 @@
             </ul>
             <button onclick = "readMore('dots 9', 'more 9', 'myBtn 9')" id="myBtn 9">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
         <div class = "item">
@@ -246,6 +247,7 @@
             </ul>
             <button onclick = "readMore('dots 10', 'more 10', 'myBtn 10')" id="myBtn 10">Read More</button>
           </span>
+          <input type= "number" name = "quantity" min ="1" max="200"></input>
           <div class = "addToCart">Add To Cart</div>
         </div>
       </div>
