--- a/wholesale.html
+++ b/wholesale.html
@@ -29,66 +29,46 @@
 
         <div class = "item">
           <img src = "./images/ChocolateBag.jpg"></img>
-          <h3 class = "itemName">Chocolate Candy Goodie Bag(min. order 50 bags)</h3>
+          <h3 class = "itemName">Chocolate Candy Goodie Bag</h3>
           <h4 class = "itemPrice">$3.65</h4>
           <span class = "description">
-          <p>Each Bag contains the following items:</p>
-          <ul>
-            <li>Minimum order is 50 Bags at $3.65 each<span id = "dots 1">...</span></li>
-            <span style = "display: none;" id = "more 1"><li>Ships in 1 to 5 business days</li>
-              <li>All orders ship via FedEx Ground!</li>
-              <li>Call toll free 1-877-221-3326</li>
-              <br><br>Bag includes a minimum of 13 pieces of chocolate candy with twist tie and ready to hand out:
-              <br>**Chocolate will vary based on availability</li></span>
-        </ul>
+          <p>Bag includes a minimum of 13 pieces of chocolate candy with<br> twist tie and ready to hand out:
+          <br>**Chocolate will vary based on availability</li></p>
+
+          </span>
+          <input type= "number" name = "quantity" min ="50" max="1000"></input>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/xctmpnkvZGY.png"></img>
+          <h3 class = "itemName">Standard Candy Goodie Bag </h3>
+          <h4 class = "itemPrice">$2.40</h4>
+          <span class = "description">
+            <p>Bag includes a minimum of 25 pieces of chocolate candy with twist tie<br> and ready to hand out:
+            <br>**Chocolate will vary based on availability</p>
+          </span>
+          <input type= "number" name = "quantity" min ="50" max="1000"></input>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+
+        <div class = "item">
+          <img src = "./images/BulkBag4.jpg"></img>
+          <h3 class = "itemName">Wholesale Goodie Bag</h3>
+          <h4 class = "itemPrice">$1.95</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Mini Flute (from assortment)<span id = "dots 1">...</span></li>
+              <span style = "display: none;" id = "more 1"><li>Stretchable Flying Frog</li>
+                <li>1" (25mm) Glow-in-the dark bouncing ball (from assortment)</li>
+                <li>Tattoo (from assortment)</li>
+                <li>Spin Top (from assortment)
+                </li><br>**In rare instances, we may have to replace an item of equal or greater cost**</br>
+              </span>
+            </ul>
         <button onclick = "readMore('dots 1', 'more 1', 'myBtn 1')" id="myBtn 1">Read More</button>
-        </span>
-        <div class = "addToCart">Add To Cart</div>
-      </div>
-      <div class = "item">
-        <img src = "./images/xctmpnkvZGY.png"></img>
-        <h3 class = "itemName">Standard Candy Goodie Bag(min. order 50 bags)</h3>
-        <h4 class = "itemPrice">$2.40</h4>
-        <span class = "description">
-        <p>Each Bag contains the following items:</p>
-        <ul>
-          <li>Buy in bulk for greater savings!<span id = "dots 2">...</span></li>
-          <span style = "display: none;" id = "more 2"><li>Minimum order is 50 Bags</li>
-          <li>No Other discounts or coupon codes will apply</li>
-          <li>If you are ordering 200 or more bags, contact us through:"ASK A QUESTION THIS PRODUCT" quantity you need for a possible discount.</li>
-          <li>Ships in 1 to 5 business days</li>
-          <li>All orders ship via FedEx Ground!</li>
-          <li>Call toll free 1-877-221-3326 - for Express shipping rates!
-          <br><br>Bag includes a minimum of 25 pieces of chocolate candy with twist tie and ready to hand out:
-          <br>**Chocolate will vary based on availability</li></span>
-        </ul>
-        <button onclick = "readMore('dots 2', 'more 2', 'myBtn 2')" id="myBtn 2">Read More</button>
       </span>
-      <div class = "addToCart">Add To Cart</div>
-    </div>
-    <div class = "item">
-      <img src = "./images/BulkBag4.jpg"></img>
-      <h3 class = "itemName">Wholesale Goodie Bag #4(min. order 50 bags)</h3>
-      <h4 class = "itemPrice">$1.95</h4>
-      <span class = "description">
-        <p>Each Bag contains the following items:</p>
-        <ul>
-          <li>Minimum order is 50 Bags at $3.65 each<span id = "dots 3">...</span></li>
-          <span style = "display: none;" id = "more 3"><li>Ships in 1 to 5 business days</li>
-          <li>All orders ship via FedEx Ground!</li>
-          <li>Call toll free 1-877-221-3326</li>
-          <li>No other discounts or coupon codes will apply</li>
-          <br><br>Bag includes the following items with twist tie and ready to hand out:
-          <br><br>Bag includes a minimum of 25 pieces of chocolate candy with twist tie and ready to hand out:
-          <li>Mini Flute (from assortment)</li>
-          <li>Stretchable Flying Frog</li>
-          <li>1" (25mm) Glow-in-the dark bouncing ball (from assortment)</li>
-          <li>Tattoo (from assortment)</li>
-          <li>Spin Top (from assortment)
-          </li><br>**In rare instances, we may have to replace an item of equal or greater cost**</br></span>
-         </ul>
-        <button onclick = "readMore('dots 3', 'more 3', 'myBtn 3')" id="myBtn 3">Read More</button>
-      </span>
+      <input type= "number" name = "quantity" min ="50" max="1000"></input>
       <div class = "addToCart">Add To Cart</div>
     </div>
   </div>
