--- a/shipping.html
+++ b/shipping.html
@@ -9,9 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class = cart>
-      <p class>Your Cart</p>
-    </div>
+    <p class = "cart">Your Cart</p>
     <header>
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
