--- a/wholesale.html
+++ b/wholesale.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <div class="container">
-    <p class = "cart">Your Cart</p>
+    <p class = "cart" onclick ="showCart()">Your Cart</p>
+    <div class = "cartDiv">
+      <h4>Selected Bags:</h4>
+      <span id = "cartBags"></span>
+    </div>
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
