--- a/buildabag.html
+++ b/buildabag.html
@@ -60,7 +60,7 @@
               <input id = "BABSelector" type= "number" value = "1" name = "quantity" min ="1" max="200"></input>
               <button onclick = "addToCart()">Add to Cart</button>
               <h4>Total Price:</h4>
-              <h5 id = "totalPrice"></h5>
+              <h5 id = "totalPrice">$0.00</h5>
             </div>
           </div>
 
