--- a/buildabag.html
+++ b/buildabag.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
   <title>Party Bags To Go</title>
@@ -20,7 +20,7 @@
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
         <a href = "./buildabag.html"><button class = "button">Build-A-Bag</button></a>
         <a href = "./wholesale.html"><button class = "button">Wholesale Bags</button></a>
-        <a href = "./contact.html"><button class = "button">Contacts</button></a>
+        <a href = "./FAQ.html"><button class = "button">FAQ</button></a>
         <a href = "./shipping.html"><button class = "button">Shipping</button></a>
       </nav>
     </header>
@@ -349,7 +349,7 @@
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
     <h4><a href="./buildabag.html">Build-a-Bag</a></h4>
     <h4><a href="./shipping.html">Shipping</a></h4>
-    <h4><a href= "./contact.html">Customer Service</a></h4>
+    <h4><a href= "./FAQ.html">Customer Service</a></h4>
     <a id="logo" href = "./index.html"><img src = "./images/logo.png"></img></a>
   </footer>
 </body>
