--- a/index.html
+++ b/index.html
@@ -48,7 +48,55 @@
           </div>
         </div>
 
-        <div class ="slideGroup">
+        <div class = "heading"><p>Featured Items</p></div>
+        <div class = "slideGroup">
+          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
+
+          <div class = "slides">
+            <img src = "./images/baseball bag.png"></img>
+            <h4>Baseball Goodie Bag</h4>
+            <h5>$3.80</h5>
+          </div>
+          <div class = "slides">
+            <img src = "./images/j.png"></img>
+            <h4>Deluxe Camouflage Goodie Bag</h4>
+            <h5>$6.25</h5>
+          </div>
+          <div class = "slides">
+            <img src = "./images/fan-fare-01.jpg"></img>
+            <h4>Fan Fare Goodie Bag</h4>
+            <h5>$3.95</h5>
+          </div>
+          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
+        </div>
+
+
+
+        <div class = "slideGroup">
+          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
+          <div class = "slides">
+            <img src = "./images/ChocolateBag.jpg"></img>
+            <h4>Chocolate Candy Goodie Bag</h4>
+            <h5>$3.65</h5>
+            <h6>Min. Order is 50 Bags</h6>
+          </div>
+          <div class = "slides">
+            <img src = "./images/RewardBag.jpg"></img>
+            <h4>Rewards Goodie Bag</h4>
+            <h5>$1.80</h5>
+            <h6>Min. Order is 50 Bags</h6>
+          </div>
+          <div class = "slides">
+            <img src = "./images/SportsBulkBag.jpg"></img>
+            <h4>Wholesale Sports Goodie Bag</h4>
+            <h5>$1.80</h5>
+            <h6>Min. Order is 50 Bags</h6>
+          </div>
+          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
+        </div>
+
+
+        <!--<div class ="slideGroup">
           <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
           <div class="slides">
             <div class = "heading">Baseball Goodie Bag</div>
@@ -64,7 +112,7 @@
               <li>Wooden Baseball Paddle ball Game</li>
               <li>Baseball Whistle</li>
             </ul>
-            <div>
+
           </div>
           <div class="slides">
             <div class = "heading">This is a placeholder2</div>
@@ -90,7 +138,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
