--- a/FAQ.html
+++ b/FAQ.html
@@ -32,13 +32,19 @@
     </div>
     <div class="main">
       <div class = "sub">
+        <b>Q: Who is Party Bags To Go? </b><br>
+        <b>A:</b>
+      </div>
+    </div>
+  </div>
+
+    <!--
         <div id="content_container">
 
         </div>
       </div><div id="center_main" class="center_main_full_width">
 
-        <div id="center_main" class="center_main_full_width">
-            <!-- central space -->
+        <div id="center_main" class="center_main_full_width"
 
         <div class="dialog noborder">
             <div class="content"><div class="pages">
@@ -123,14 +129,10 @@
               </div>
             </div>
           </div>
-
-
-            <script type="text/javascript" src="/skin/common_files/modules/Ybizz_Modules_Includes/ybizz_products_table_script.js"></script>
-        <!-- /central space -->
           </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
 
   <footer>
