--- a/index.html
+++ b/index.html
@@ -37,18 +37,24 @@
           <div class = "cell">
             <h3 style = "border-bottom: 1px solid grey;">Premade Bags</h3>
             <p>Choose a bag with a pre-determined theme to have at your event.</p>
+            <img src = "./images/j.png"></img>
+            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
           </div>
           <div class="cell">
             <h3 style = "border-bottom: 1px solid grey;">Build-A-Bag</h3>
             <p>Choose the items to be put in your own, personalized goodie bag that we make and then send to you.</p>
+            <img src = "./images/babribbon.png"></img>
+            <a href = "./buildabag.html"><button class = "goTo">Design your own Goodie Bag</button></a>
           </div>
           <div class="cell">
             <h3 style = "border-bottom: 1px solid grey;">Wholesale Bags</h3>
             <p>Buy bags in bulk (50 or more) that have a pre-determined theme.</p>
+            <img src="./images/BULK-BAG2.jpg"></img>
+            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
           </div>
         </div>
 
-        <div class = "heading"><p>Featured Items</p></div>
+        <div class = "gallery-heading"><h3>Featured Items</h3></div>
         <div class = "slideGroup">
           <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
 
@@ -56,89 +62,50 @@
             <img src = "./images/baseball bag.png"></img>
             <h4>Baseball Goodie Bag</h4>
             <h5>$3.80</h5>
+            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
           </div>
           <div class = "slides">
             <img src = "./images/j.png"></img>
             <h4>Deluxe Camouflage Goodie Bag</h4>
             <h5>$6.25</h5>
+            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
           </div>
           <div class = "slides">
             <img src = "./images/fan-fare-01.jpg"></img>
             <h4>Fan Fare Goodie Bag</h4>
             <h5>$3.95</h5>
+            <a href = "./premade.html"><button class = "goTo">View Premade Bags</button></a>
           </div>
           <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
         </div>
-
-
-
         <div class = "slideGroup">
           <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
-          <div class = "slides">
+          <div class = "slides2">
             <img src = "./images/ChocolateBag.jpg"></img>
             <h4>Chocolate Candy Goodie Bag</h4>
             <h5>$3.65</h5>
             <h6>Min. Order is 50 Bags</h6>
+            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
           </div>
-          <div class = "slides">
+          <div class = "slides2">
             <img src = "./images/RewardBag.jpg"></img>
             <h4>Rewards Goodie Bag</h4>
             <h5>$1.80</h5>
             <h6>Min. Order is 50 Bags</h6>
+            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
           </div>
-          <div class = "slides">
+          <div class = "slides2">
             <img src = "./images/SportsBulkBag.jpg"></img>
             <h4>Wholesale Sports Goodie Bag</h4>
             <h5>$1.80</h5>
             <h6>Min. Order is 50 Bags</h6>
-          </div>
-          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
-        </div>
-
-
-        <!--<div class ="slideGroup">
-          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
-          <div class="slides">
-            <div class = "heading">Baseball Goodie Bag</div>
-            <p>Each Bag contains the following items:</p>
-            <ul>
-              <li>Foam Baseball</li>
-              <li>Mini Baseball Sports Missile</li>
-              <li>Baseball Tattoo (assorted)</li>
-              <li>Mini Baseball Magic Spring</li>
-            </ul>
-            <ul>
-              <li>2 Baseball Fun Bands</li>
-              <li>Wooden Baseball Paddle ball Game</li>
-              <li>Baseball Whistle</li>
-            </ul>
-
-          </div>
-          <div class="slides">
-            <div class = "heading">This is a placeholder2</div>
-          </div>
-          <div class="slides">
-            <div class = "heading">This is a placeholder3</div>
-          </div>
-          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
-        </div>
-
-        <div class = "slideGroup">
-          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
-          <div class="slides">
-            <div class = "heading">This is a placeholder4</div>
-          </div>
-          <div class="slides">
-            <div class = "heading">This is a placeholder5</div>
-          </div>
-          <div class="slides">
-            <div class = "heading">This is a placeholder6</div>
+            <a href = "./wholesale.html"><button class = "goTo">View Wholesale Bags</button></a>
           </div>
           <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
         </div>
       </div>
     </div>
-  </div>-->
+  </div>
 
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
