--- a/buildabag.html
+++ b/buildabag.html
@@ -15,7 +15,7 @@
       <span id = "cartBags"></span>
     </div>
     <header>
-      <a href = "./index.html"><img src = "./images/logo.png"></img></a>
+      <a href = "./index.html"><img class = "logo" src = "./images/logo.png"></img></a>
       <nav>
         <a href = "./premade.html"><button class="button">Premade Bags</button></a>
         <a href = "./buildabag.html"><button class = "button">Build-A-Bag</button></a>
