--- a/premade.html
+++ b/premade.html
@@ -12,6 +12,7 @@
     <p class = "cart" onclick ="showCart()">Your Cart</p>
     <div class = "cartDiv">
       <h4>Selected Bags:</h4>
+      <button onclick = "clearCart()">Click to Clear your Cart</button>
       <span id = "cartBags"></span>
     </div>
     <header>
